namespace Application.Schemas.Models.ModifySchema;

public sealed record ModifySchemaRequest(string Name, string JsonSchema);

