@startuml Schema_ModifySchema_Endpoint

' Endpoint: PUT /schemas/{id}
' Controller: SchemaController
' Method: ModifySchema

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Controller>> LightBlue
    BackgroundColor<<Service>> LightGreen
    BackgroundColor<<Repository>> LightYellow
    BackgroundColor<<Entity>> LightCoral
    BackgroundColor<<DTO>> LightGray
}

class SchemaController <<Controller>> {
    + ModifySchema(id: int, body: ModifySchemaRequest): void
}

interface ISchemaService <<Service>> {
    + ModifySchema(id: int, body: ModifySchemaRequest): void
}

class SchemaService <<Service>> {
    + ModifySchema(id: int, body: ModifySchemaRequest): void
}

class ModifySchemaRequest <<DTO>> {
    + Name: string
    + JsonSchema: string
}

interface ISchemaRepository <<Repository>> {
    + Add(schema: Schema): void
    + GetAll(): List<Schema>
    + GetById(id: int): Schema?
    + SaveChanges(): void
}

class SchemaRepository <<Repository>> {
    + Add(schema: Schema): void
    + GetAll(): List<Schema>
    + GetById(id: int): Schema?
    + SaveChanges(): void
}

class Schema <<Entity>> {
    + Id: int
    + Name: string
    + JsonSchema: string
    + DataSets: List<DataSet>
}

' Relationships
SchemaController ..> ISchemaService : uses
SchemaController ..> ModifySchemaRequest : receives
ISchemaService <|.. SchemaService : implements
SchemaService ..> ISchemaRepository : uses
SchemaService ..> ModifySchemaRequest : uses
SchemaService ..> Schema : modifies
ISchemaRepository <|.. SchemaRepository : implements
SchemaRepository ..> Schema : persists

note right of SchemaController
  **HTTP PUT** /schemas/{id}
  Updates an existing schema
  Status: 204 No Content
end note

@enduml
